--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
     <!-- navbar starts here -->
     <section class="nav-bar">
         <div class="row">
-            <div class="item">
+            <div class="logo-sign">
                 <div class="logo">
                     <a href=""><i class="fa fa-cutlery" aria-hidden="true"></i></a>
                 </div>
             </div>
-            <div class="item link-container">
+            <div class="title">
+                <h1>FOOD NETWORK</h1>
+            </div>
+            <div class="link-container">
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT US</a></li>
@@ -38,7 +41,7 @@
     <section class="banner">
         <div class="row">
             <div class="item description">
-                <h1><span>Skip</span> The Diet, Just <br> Eat Healthy With <br>Food Network</h1>
+                <h1><span class="orange-color">Skip</span> The Diet, Just <br> Eat Healthy With <br>Food Network</h1>
                 <p>Imagin you don't need a diet because we provide health and delicious food for you!</p>
                 <div class="btn">
                     <a href="">order food</a>
@@ -53,8 +56,11 @@
     <!-- About-me starts here -->
     <section class="about-me">
         <div class="row">
-            <div class="item my-photo">
-                <img src="images/girlPhoto2.png" alt="Owner's Photo">
+            <div class="item">
+                <div class="my-photo">
+                    <img src="images/girlPhoto2.png" alt="Owner's Photo">
+                </div>
+
             </div>
             <div class="item description">
                 <div class="my-info">
@@ -72,6 +78,49 @@
         </div>
     </section>
     <!-- About-me ends here -->
+    <!-- Recipies starts here -->
+    <section class="Recipies">
+        <h2>My Recipies</h2>
+        <p>Here you can find some authentic flavour food item. All subcontinental food can be found here. <br> There are
+            also
+            Mexican and Italian food items.</p>
+        <div class="food-item">
+            <div class="card">
+                <div class="food-photo">
+                    <img src="images/food1.jpg" alt="">
+                </div>
+                <div class="food-description">
+                    <h3>Sweet Cake</h3>
+                    <p>Food Code : C1</p>
+                    <p>Price : 250tk per pound</p>
+                    <p>Ratings : 5.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="food-photo">
+                    <img src="images/food3.jpg" alt="">
+                </div>
+                <div class="food-description">
+                    <h3>Steak</h3>
+                    <p>Food Code : s1</p>
+                    <p>Price : 330tk</p>
+                    <p>Ratings : 5.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="food-photo">
+                    <img src="images/food2.png" alt="">
+                </div>
+                <div class="food-description">
+                    <h3>Thai Soup</h3>
+                    <p>Food Code : tS1</p>
+                    <p>Price : 150tk </p>
+                    <p>Ratings : 4.99</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Recipies ends here -->
     <script src="https://use.fontawesome.com/7e1c4d83d5.js"></script>
 </body>
 
