--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <p>Here you can find some authentic flavour food item. All subcontinental food can be found here. <br> There are
             also
             Mexican and Italian food items.</p>
-        <div class="food-item">
+        <div class="card-item">
             <div class="card">
                 <div class="food-photo">
                     <img src="images/food1.jpg" alt="">
@@ -121,6 +121,28 @@
         </div>
     </section>
     <!-- Recipies ends here -->
+
+    <!-- Rating starts here -->
+    <section class="followers">
+        <div class="card-item followers-container">
+            <div class="media">
+                <h2>700k</h2>
+                <p>Youtube subscriber</p>
+            </div>
+            <div class="media">
+                <h2>2.5m</h2>
+                <p>Instagram Followers</p>
+            </div>
+            <div class="media">
+                <h2>100k</h2>
+                <p>Dribble Short Link</p>
+            </div>
+        </div>
+    </section>
+    <!-- Rating ends here -->
+
+
+
     <script src="https://use.fontawesome.com/7e1c4d83d5.js"></script>
 </body>
 
