--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="logo-sign">
                 <div class="logo">
-                    <a href=""><i class="fa fa-cutlery" aria-hidden="true"></i></a>
+                    <a href="index.html"><i class="fa fa-cutlery" aria-hidden="true"></i></a>
                 </div>
             </div>
             <div class="title">
@@ -28,15 +28,17 @@
             </div>
             <div class="link-container">
                 <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT US</a></li>
-                    <li><a href="#">FOOD MENU</a></li>
-                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="#about-me-id">ABOUT</a></li>
+                    <li><a href="#Recipies-id">FOOD MENU</a></li>
+                    <li><a href="#contact-id">CONTACT US</a></li>
                 </ul>
             </div>
         </div>
     </section>
     <!-- navbar ends here -->
+
+
     <!-- banner starts here -->
     <section class="banner">
         <div class="row">
@@ -53,8 +55,10 @@
         </div>
     </section>
     <!-- banner ends here -->
+
+
     <!-- About-me starts here -->
-    <section class="about-me">
+    <section class="about-me" id="about-me-id">
         <div class="row">
             <div class="item">
                 <div class="my-photo">
@@ -78,8 +82,10 @@
         </div>
     </section>
     <!-- About-me ends here -->
+
+
     <!-- Recipies starts here -->
-    <section class="Recipies">
+    <section class="Recipies" id="Recipies-id">
         <h2>My Recipies</h2>
         <p>Here you can find some authentic flavour food item. All subcontinental food can be found here. <br> There are
             also
@@ -140,10 +146,67 @@
         </div>
     </section>
     <!-- Rating ends here -->
+    <!-- contact starts -->
+    <section class="contact" id="contact-id">
+        <h2>Contact Us</h2>
+        <p>We are available for you for 24/7. Feel free to order</p>
+        <section class="contact-us">
+            <div class="row contact">
+                <div class="map-div contact-item">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58431.43617879869!2d90.36951107910157!3d23.748636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b88fb9fd2ae5%3A0x72bbc57003322907!2sFood%20Network%20Bangladesh!5e0!3m2!1sen!2sbd!4v1625581284996!5m2!1sen!2sbd"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <div class="contact-info contact-item">
 
-
-
-    <script src="https://use.fontawesome.com/7e1c4d83d5.js"></script>
+                    <div>
+                        <i class="fa fa-home"></i>
+                        <span>
+                            <h5>5 Shaheed Shangbadik Salina Parvin Sarak Boro Moghbazar</h5>
+                            <p> Dhaka 1217</p>
+                        </span>
+                    </div>
+                    <br>
+                    <div>
+                        <i class="fa fa-phone"></i>
+                        <span>
+                            <h5>Cell: +8801992650428 <br>Tel: 88-02-9232334-5, 9155574.</h5>
+                            <p>24/7, 10AM to 11 pm</p>
+                        </span>
+                    </div>
+                    <br>
+                    <div>
+                        <i class="fa fa-envelope-o"></i>
+                        <span>
+                            <h5>foodnetwork@gmail.com</h5>
+                            <p>Mail us for more query</p>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- footer starts here -->
+        <footer>
+            <div class="footer">
+                <h2><span class="orange-color">Food</span> Netork</h2>
+                <p>Eat healthy to live healthy. Live healthy to live happy</p>
+                <ul>
+                    <li><a href="https://www.facebook.com/FoodNetwork" target="_blank"><i class="fa fa-facebook"
+                                aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.youtube.com/user/FoodNetworkTV" target="_blank"><i
+                                class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.instagram.com/foodnetwork/" target="_blank"><i class="fa fa-instagram"
+                                aria-hidden="true"></i></a></li>
+                    <li><a href="https://dribbble.com/tags/food_network" target="_blank"><i class="fa fa-dribbble"
+                                aria-hidden="true"></i></a></li>
+                </ul>
+                <p>&copy All rights reserves to Food netword</p> <br>
+                <p>Made By Mahiya Rahman Rafa <i class="fa fa-heart" aria-hidden="true"></i>
+                </p>
+            </div>
+        </footer>
+        <!-- footer ends here -->
+        <script src="https://use.fontawesome.com/7e1c4d83d5.js"></script>
 </body>
 
 </html>
