--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1><span class="orange-color">Skip</span> The Diet, Just <br> Eat Healthy With <br>Food Network</h1>
                 <p>Imagin you don't need a diet because we provide health and delicious food for you!</p>
                 <div class="btn">
-                    <a href="">order food</a>
+                    <a href="">Order Food</a>
                 </div>
             </div>
             <div class="item  banner-photo">
